--- a/src/i18n/i18n_de.properties
+++ b/src/i18n/i18n_de.properties
@@ -1,3 +1,4 @@
 app_title=templateproject
 app_description=UI5 Application templateproject
-btn_text=Sag Hallo
+title=Inzidenzübersicht
+incidenceLabel=Inzidenz
