--- a/src/i18n/i18n_en.properties
+++ b/src/i18n/i18n_en.properties
@@ -1,3 +1,4 @@
 app_title=templateproject
 app_description=UI5 Application templateproject
-btn_text=Say Hello
+title=Incidence Overview
+incidenceLabel=Incidence
